# rdk-logger

./: CONTRIBUTING.md  Makefile  Makefile.am  README  build.sh  config.mak  configure.ac  debug.ini  log4crc  rdk_build.sh  rdk_env.xml  rdkb_debug.ini  rdkb_debug_arm.ini  rdkb_debug_atom.ini  rdkb_log4crc  rdkb_log4crc_arm  rdkb_log4crc_atom  rdkb_log4crc_mv1  rdkc_log4crc
cfg/: Makefile.am
doc/: rdklogger-doxygen.cfg
include/: Makefile.am  rdk_debug.h  rdk_dynamic_log.h  rdk_error.h  rdk_log_reg.h  rdk_logger_milestone.h  rdk_logger_types.h  rdk_utils.h
ipk/: control  debian-binary
scripts/: logMilestone.sh
src/: Makefile.am  getClockUptime.c  rdk_debug.c  rdk_debug_priv.c  rdk_dynamic_logger.c  rdk_logger_init.c  rdk_logger_milestone.c  rdk_logger_milestone.cpp  rdk_logger_onboard.c  rdk_logger_util.c
src/include/: rdk_debug_priv.h  rdk_dynamic_logger.h
src/util/: Makefile.am  rdk_dynamic_log_reg.c
test/: Makefile.am  rdk_dynamic_logger_test.c  rdk_logger_debug_test.c  rdk_logger_test_main.c
utils/: Makefile.am  rdk_logger_onboard_main.c  rdklogctrl.c  rdklogmilestone.c
