#####################################################################
#
# COMCAST PROPRIETARY AND CONFIDENTIAL
# __________________
#
#  Copyright 2015 Comcast Cable Communications Management, LLC
#  All Rights Reserved.
#
# NOTICE:  All information contained herein is, and remains the property of Comcast
# and its suppliers, if any.  The concepts contained herein are proprietary to Comcast
# and its suppliers and may be covered by U.S. and foreign patents or patents in process,
# and are protected by trade secret or copyright law.  Dissemination of this information
# or reproduction of this material is strictly forbidden without prior written permission
# from Comcast.
#
#####################################################################

dnl                                               -*- Autoconf -*-
dnl Process this file with autoconf to produce a configure script.

dnl AC_PREREQ([2.69])
AC_INIT(rdklogger, 1.0, balaji_punnuru@cable.comcast.com,rmfwebkitifc)
AC_CONFIG_SRCDIR([src])
AM_CONFIG_HEADER(cfg/config.h)
AC_CONFIG_MACRO_DIR([cfg])
AC_CONFIG_AUX_DIR([cfg])
AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 1.9])
LT_INIT
IS_DYNAMIC_ENABLED=""

dnl subdirectories.

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CPP
AC_PROG_CXXCPP

dnl use pretty build output with automake >= 1.11
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])],
  [AM_DEFAULT_VERBOSITY=1
   AC_SUBST(AM_DEFAULT_VERBOSITY)])




dnl **********************************
dnl checks for dependencies
dnl **********************************
SYSTEMD_CFLAGS=" "
SYSTEMD_LDFLAGS=" "
UTILS=""
AC_ARG_ENABLE([dynamic],
        AS_HELP_STRING([--enable-dynamic],[enable dynamic (default is no)]),
        [
          case "${enableval}" in
           yes) IS_DYNAMIC_ENABLED=true
                UTILS="util";;
           no)  IS_DYNAMIC_ENABLED=false ;;
          *) AC_MSG_ERROR([bad value ${enableval} for --enable-dynamic]) ;;
           esac
           ],
        [echo "dynamic logging is disabled"])
AM_CONDITIONAL([IS_DYNAMIC_ENABLED], [test x$IS_DYNAMIC_ENABLED = xtrue])


AC_ARG_ENABLE([journal],
        AS_HELP_STRING([--enable-journal],[enable systemd journal logging]),
        [
                case "${enableval}" in
                yes) SYSTEMD_CFLAGS="-DSYSTEMD_JOURNAL"
                     SYSTEMD_LDFLAGS="-lsystemd" ;;
                no) AC_MSG_ERROR([systemd journal logging  is disabled]) ;;
                *) AC_MSG_ERROR([bad value ${enableval} for --enable-journal ]) ;;
                esac
                ],
        [echo "journal logging  is disable"])

AC_SUBST(SYSTEMD_CFLAGS)
AC_SUBST(SYSTEMD_LDFLAGS)
AC_SUBST(UTILS)

AC_HEADER_STDC

dnl Checks for header files.
AC_CHECK_HEADERS([limits.h memory.h stdlib.h string.h sys/socket.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_CHECK_HEADER_STDBOOL
AC_TYPE_UINT8_T

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset strdup strerror])

PKG_CHECK_MODULES([LOG4C], [log4c >= 1.2.3])

AC_CONFIG_FILES([Makefile
		 cfg/Makefile
                 src/Makefile
                 src/util/Makefile
                 test/Makefile
                 include/Makefile])
AC_OUTPUT
